# meistertask-to-vikunja

./: .gitignore  LICENSE  README.md  pyproject.toml
src/meistertask_vikunja/: __init__.py  __main__.py  cli.py
tests/: test_importer_utils.py
