[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meistertask-vikunja"
version = "0.1.0"
description = "Import Meistertask exports into Vikunja"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [{name = "Lars de Ridder"}]
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "black>=24.3"]

[project.scripts]
meistertask-to-vikunja = "meistertask_vikunja.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
